<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_marginLeft="10dip">

		<CheckBox android:id="@+id/CheckEnable" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/enable"></CheckBox>
		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/target"
				android:layout_weight="2"></TextView>
			<EditText android:text="" android:id="@+id/EditTarget"
				android:inputType="number" android:layout_weight="1"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:background="@color/LightBlue"
			android:layout_height="1px" ></View>
		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/startChar"></TextView>
			<EditText android:text="" android:id="@+id/EditStartChar"
				android:maxLength="1" android:layout_width="60dip"
				android:layout_height="wrap_content"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/endChar"></TextView>
			<EditText android:text="" android:id="@+id/EditEndChar"
				android:maxLength="1" android:layout_width="60dip"
				android:layout_height="wrap_content"></EditText>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:background="@color/LightBlue"
			android:layout_height="1px" ></View>
		<LinearLayout android:id="@+id/LinearLayout03"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_gravity="center">
			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:id="@+id/group1">
				<TextView android:text="@string/redirectMethod"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<RadioButton android:text="@string/redirectAll"
					android:checked="false" android:id="@+id/RadioAll"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
				<RadioButton android:text="@string/redirectPartial"
					android:checked="false" android:id="@+id/RadioPartial"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
			
</RadioGroup>

			<ListView android:id="@android:id/list" android:layout_width="fill_parent"
				android:background="@color/LightBlue" android:layout_height="120dip"
			></ListView>

		</LinearLayout>

		<LinearLayout android:id="@+id/LinearLayout02"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center">
			<Button android:text="@string/OK" android:id="@+id/ButtonOK"
				android:layout_width="100dip" android:layout_height="wrap_content"
				android:onClick="onClick"></Button>
			<Button android:text="@string/cancel" android:id="@+id/ButtonCancel"
				android:layout_width="100dip" android:layout_height="wrap_content"
				android:onClick="onClick"></Button>
			<Button android:text="@string/about" android:id="@+id/ButtonAbout"
				android:layout_width="100dip" android:layout_height="wrap_content"
				android:onClick="onClick"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>